# DO11

./: .gitignore  analysis.py  documentation.md  health_data.ows  health_data_analyzer.py  main.py  project_workflow.md  pyproject.toml
.github/: copilot-instructions.md
analysis_output/: feature_selection_report.md
data/: preprocessed_features.csv  preprocessed_features_20250326_175309.csv  preprocessed_features_20250327_135655.csv  preprocessed_target_20250327_135655.csv
utils/: data_explorer.py  preprocessor.py  switch.py
