[project]
name = "od11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "jinja2>=3.1.6",
    "mice>=0.1.31",
    "missingno>=0.5.2",
    "orange3>=3.38.1",
    "pyqt5>=5.15.11",
    "pyqtwebengine>=5.15.7",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
